--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,9 @@
 audit_header: false
 title: The REllis Group
-description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
+description: >-
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+  -- MARKET -- Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
@@ -8,11 +11,18 @@ custom_links:
 client:
   name: Rob Ellis
   license_number: 2014002724
-  about_markdown: 'The REllis Group is a real estate team based out of Central Ohio with a vision to motivate and inspire people to create a better life through real estate. Our core commitment is to focus on new business daily, master all aspects of the home sales process, deliver a world-class client experience, and create raving past clients that continue to work with our team throughout their lifetime. The REllis Group services all 8 counties that surround Columbus, Ohio.'
+  about_markdown: >-
+    The REllis Group is a real estate team based out of Central Ohio with a
+    vision to motivate and inspire people to create a better life through real
+    estate. Our core commitment is to focus on new business daily, master all
+    aspects of the home sales process, deliver a world-class client experience,
+    and create raving past clients that continue to work with our team
+    throughout their lifetime. The REllis Group services all 8 counties that
+    surround Columbus, Ohio.
   market: Columbus
   brand: The REllis Group
   brokerage: Key Realty
-  address: '1350 West 5th Ave. Suite 326<br>Columbus, OH 43212'
+  address: '995 Goodale Blvd, 2nd Floor<br>Columbus, OH 43212'
   phone: 614-400-8762
   phone_type:
   phone2:
@@ -30,12 +40,12 @@ sidebar_CTA:
   CTA_title: Looking to Buy a Home?
   CTA_text: Search the entire MLS for homes located in -- MARKET --.
   CTA_link_text: Home Search Tool
-  CTA_url: http://www.rellisgroup.com/search/criteria/s_2
+  CTA_url: 'http://www.rellisgroup.com/search/criteria/s_2'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    Our mission at -- CLIENT BRAND -- is to be your best resource for real estate
-    advice. Whether you are a buyer, seller, or investor, our team of
+    Our mission at -- CLIENT BRAND -- is to be your best resource for real
+    estate advice. Whether you are a buyer, seller, or investor, our team of
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
@@ -49,17 +59,30 @@ socials:
   instagram_url:
   pinterest_url:
   zillow_url: 'http://www.zillow.com/profile/The-REllis-Group/'
-  trulia_url: 'https://www.trulia.com/directory/-agent-Rob+Ellis+And+The+REllis+Group+at+Key+Realty/'
+  trulia_url: >-
+    https://www.trulia.com/directory/-agent-Rob+Ellis+And+The+REllis+Group+at+Key+Realty/
   yelp_url: 'https://www.yelp.com/biz/rellis-group-at-key-realty-columbus'
-  podcast_url: 'https://itunes.apple.com/us/podcast/columbus-real-estate-podcast-with-rob-ellis/id1218851836?mt=2'
+  podcast_url: >-
+    https://itunes.apple.com/us/podcast/columbus-real-estate-podcast-with-rob-ellis/id1218851836?mt=2
 podcast:
   title: Columbus Real Estate Podcast with Rob Ellis
   categories:
     - Education
   image: /img/podcast.png
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the -- MARKET
+    -- Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+    -- MARKET -- Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in -- MARKET --,
+    home selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
   author: '-- CLIENT NAME --'
 images:
   client_headshot_path: /img/headshot.jpg
