--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,7 +7,7 @@ custom_links:
     url:
 
 client:
-  name: Rosalin Smith Carr
+  name: Rosalin Smith-Carr
   license_number:
   about_markdown: |
     Prime Toronto Neighbourhoods is a real estate brokerage firm that specializes in prime locations throughout the Toronto area. Rosalin Smith-Carr is one of the finest and well respected real estate agents in Toronto with a knack for locating homes that her clients are thrilled to discover and in getting them into those homes with minimal stress. The market for homes in Toronto is hotter than ever and it takes an exceptional real estate agent to help you get out in front of all the other buyers when you’re looking to buy a home. We know you have options for the agent you choose to work with and we’re confident that after you interview the rest, you’ll select Rosalin as your real estate agent of choice. Many of your neighbours already have!
@@ -20,7 +20,7 @@ client:
   phone2:
   phone2_type:
   email: rsmithcarr@icloud.com
-  url: www.primetorontoneighbourhoods.com
+  url: http://www.primetorontoneighbourhoods.com
 
 CTAs:
   first_CTA_text: Home Valuation
