--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,41 +1,56 @@
 audit_header: false
 title: Michigan 401k Resource Video Blog
-description: 'Helping Metro Detroit Businesses 401(k) Retirement Plans | Personal Wealth Mangement'
+description: >-
+  Helping Metro Detroit Businesses 401(k) Retirement Plans | Personal Wealth
+  Mangement
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Steve Case
   license_number:
-  about_markdown: |
-    Steve is your registered financial adviser focusing on 401(k) plans. With over 27 years of experience in strategic retirement planning, his vision and experience in sound retirement planning has helped Financial Independence become a well-rounded 401(k) provider. Steve is a graduate of Cornell University with a Bachelor of Science in Business Administration and Applied Economics. To schedule a consultation with Steve, please call Kelsey at <a href="tel:248-282-9905">248-282-9905.</a>
+  about_markdown: >
+    Steve is your registered financial adviser focusing on 401(k) plans. With
+    over 27 years of experience in strategic retirement planning, his vision and
+    experience in sound retirement planning has helped Financial Independence
+    become a well-rounded 401(k) provider. Steve is a graduate of Cornell
+    University with a Bachelor of Science in Business Administration and Applied
+    Economics. To schedule a consultation with Steve, please call Kelsey at <a
+    href="tel:248-282-9905">248-282-9905.</a>
   market:
-  brand: Financial Independence, LLC
+  brand: 'Financial Independence, LLC'
   brokerage: Personal Wealth Management & 401K Resource
-  address: 3883 Telegraph Road Suite 203 Bloomfield Hills, MI 48302
+  address: '3883 Telegraph Road Suite 203 Bloomfield Hills, MI 48302'
   phone: 248-594-8114
   phone_type: Direct
   phone2: 1-866-844-4102
   phone2_type: Office
   email: scase@fscadvisor.com
-  # url: http://www.financial-independence.com
-
 CTAs:
   first_CTA_text: Get Your Free eBook
-  first_CTA_URL: http://michigan401kadvisors.com
+  first_CTA_URL: 'http://michigan401kadvisors.com'
   second_CTA_text: Schedule a Consultation
-  second_CTA_URL: http://michigan401kadvisors.com/contact
-  VR_form: http://oi.vresp.com?fid=4e1782c081
-
+  second_CTA_URL: 'http://michigan401kadvisors.com/contact'
+  VR_form: 'http://oi.vresp.com?fid=4e1782c081'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/006.png
     CTA_title: Download Your Free eBook
-    CTA_text: TRACKING RETIREMENT. As an employer sponsoring a 401(k) plan, are you taking advantage of powerful techniques that will enhance the chances of your employees making it to their retirement destination? Are you using the right processes, systems, and techniques to responsibly manage your company's retirement plan? Are you doing everything you can to ensure your employees feel confident that they will have enough money to retire and pay for all the things they desire to do someday? Beating the Best reveals valuable strategies that will significantly impact retirement outcome results for you and your employees. Authors Steve Case and Evan Pawlowski will help you give your employees a properly designed 401(k) that can replace the pensions of generations past and become the reliable lifetime income employees need to enjoy a successful retirement
+    CTA_text: >-
+      TRACKING RETIREMENT. As an employer sponsoring a 401(k) plan, are you
+      taking advantage of powerful techniques that will enhance the chances of
+      your employees making it to their retirement destination? Are you using
+      the right processes, systems, and techniques to responsibly manage your
+      company's retirement plan? Are you doing everything you can to ensure your
+      employees feel confident that they will have enough money to retire and
+      pay for all the things they desire to do someday? Beating the Best reveals
+      valuable strategies that will significantly impact retirement outcome
+      results for you and your employees. Authors Steve Case and Evan Pawlowski
+      will help you give your employees a properly designed 401(k) that can
+      replace the pensions of generations past and become the reliable lifetime
+      income employees need to enjoy a successful retirement
     CTA_link_text: Download Now
-    CTA_url: http://www.michigan401kadvisors.com
-
+    CTA_url: 'http://www.michigan401kadvisors.com/tracking-retirement'
 lender:
   show_section: true
   header_text:
@@ -47,56 +62,61 @@ lender:
   phone: 1-866-844-4102
   email: epawloski@fscadvisor.com
   url:
-
 welcome_box:
   welcome_headline: Get Educated About Your Financial Future
-  welcome_text_markdown: >
-    Our mission at -- CLIENT BRAND -- is to be your best resource for financial advice. Our team of professionals can answer any questions you might have about finance. Subscribe to this blog to get the latest news on finance and receive expert tips for preparing yourself for your financial future.
-
+  welcome_text_markdown: >-
+    Our mission at – CLIENT BRAND – is to be your best resource for financial
+    advice. Our team of professionals can answer any questions you might have
+    about finance. Subscribe to this blog to get the latest news on finance and
+    receive expert tips for preparing yourself for your financial future.
 socials:
   review_sm_icons: false
   facebook_url:
-  linkedin_url: https://www.linkedin.com/in/stevenjcase/
-  gplus_url: https://plus.google.com/109876721259206167459
-  youtube_url: https://www.youtube.com/channel/UCvFtfIncZaCqFqfE3zXu8pw
+  linkedin_url: 'https://www.linkedin.com/in/stevenjcase/'
+  gplus_url: 'https://plus.google.com/109876721259206167459'
+  youtube_url: 'https://www.youtube.com/channel/UCvFtfIncZaCqFqfE3zXu8pw'
   twitter_url:
   instagram_url:
   pinterest_url:
   zillow_url:
   trulia_url:
   yelp_url:
-  podcast_url: https://itunes.apple.com/us/podcast/michigan-401k-resource-podcast/id1232813481?mt=2
-
+  podcast_url: >-
+    https://itunes.apple.com/us/podcast/michigan-401k-resource-podcast/id1232813481?mt=2
 podcast:
   title: Michigan 401k Resource Podcast
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
-  subtitle: 'Helping Metro Detroit Businesses 401(k) Retirement Plans | Personal Wealth Mangement'
-  description: Learn all the tips, tricks and more for Personal Wealth Management and 401K Retirement Plans'
-  keywords: 'Financial Advisors, Financial Planning, 401K, Retirement plans, financial independence, Financial planners, 401K resource'
+  subtitle: >-
+    Helping Metro Detroit Businesses 401(k) Retirement Plans | Personal Wealth
+    Mangement
+  description: >-
+    Learn all the tips, tricks and more for Personal Wealth Management and 401K
+    Retirement Plans'
+  keywords: >-
+    Financial Advisors, Financial Planning, 401K, Retirement plans, financial
+    independence, Financial planners, 401K resource
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: '401K Resource Video Blog'
+  hero_text: 401K Resource Video Blog
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#EE582C'
+  brand_color: '#ee582c'
   theme_color: '#131839'
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: "transparent"
-
+  shadow_color: 'rgba(0, 0, 0, 0)'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
