--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,7 +29,7 @@ client:
   email: scase@fscadvisor.com
 CTAs:
   first_CTA_text: Get Your Free eBook
-  first_CTA_URL: 'http://michigan401kadvisors.com'
+  first_CTA_URL: 'http://www.michigan401kadvisors.com/tracking-retirement'
   second_CTA_text: Schedule a Consultation
   second_CTA_URL: 'http://michigan401kadvisors.com/contact'
   VR_form: 'http://oi.vresp.com?fid=4e1782c081'
