--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -91,7 +91,7 @@ podcast:
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
 images:
-  client_headshot_path: 'http://i.imgur.com/ri3QnT0.png'
+  client_headshot_path: '/img/headshot.png'
   hero_logo_path: /img/logo.png
   hero_logo_path-2: /img/logo-2.png
   logo_width_number: 40
