--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,97 +1,110 @@
 audit_header: false
-title: -- CLIENT BRAND --
-description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
+title: '-- CLIENT BRAND --'
+description: >-
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+  -- MARKET -- Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Chad Smith
   license_number:
-  about_markdown: |
-    At the Chad Smith Team, we are achieving great results for our clients.    In the last 12 months, Chad and his team have sold 185 homes and our  listings have sold for over 99.2% of list price!  Our commitment is to treat every one of our clients with a spirit of excellence in every aspect of the home buying or home selling process.
+  about_markdown: >-
+    At the Chad Smith Team, we are achieving great results for our clients. In
+    the last 12 months, Chad and his team have sold 230 homes and our listings
+    have sold for over 99.2% of list price! Our commitment is to treat every one
+    of our clients with a spirit of excellence in every aspect of the home
+    buying or home selling process.
   market: Dallas/Fort Worth
   brand: Chad Smith Real Estate Solutions Team
   brokerage: Keller Williams Realty
-  address: 1301 S Bowen Road Suite 125, Arlington, TX 76013
+  address: '1301 S Bowen Road Suite 125, Arlington, TX 76013'
   phone: 817-264-7653
   phone_type:
   phone2:
   phone2_type:
   email: thechadsmithteam@gmail.com
-  url: https://www.dfwpowersearch.com
-
+  url: 'https://www.dfwpowersearch.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: https://www.dfwpowersearch.com/home-valuation/
+  first_CTA_URL: 'https://www.dfwpowersearch.com/home-valuation/'
   second_CTA_text: Home Search
-  second_CTA_URL: https://www.dfwpowersearch.com/
-  VR_form: http://oi.vresp.com?fid=0cfc419fb2
-
+  second_CTA_URL: 'https://www.dfwpowersearch.com/'
+  VR_form: 'http://oi.vresp.com?fid=0cfc419fb2'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
-    CTA_title: "What’s Your -- MARKET -- Home Worth?"
-    CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
-    CTA_link_text: "Free Home Value Report"
-    CTA_url: https://www.dfwpowersearch.com/home-valuation/
-
+    CTA_title: What’s Your -- MARKET -- Home Worth?
+    CTA_text: >-
+      Are you thinking of selling your home or interested in learning about home
+      prices in your neighborhood? We can help you.
+    CTA_link_text: Free Home Value Report
+    CTA_url: 'https://www.dfwpowersearch.com/home-valuation/'
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a -- MARKET -- Home?"
-    CTA_text2: "Search the entire MLS for your -- MARKET -- home."
-    CTA_link_text2: "Search the MLS"
-    CTA_url2: https://www.dfwpowersearch.com/
-
+    CTA_title2: Looking for a -- MARKET -- Home?
+    CTA_text2: Search the entire MLS for your -- MARKET -- home.
+    CTA_link_text2: Search the MLS
+    CTA_url2: 'https://www.dfwpowersearch.com/'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    Our mission at -- CLIENT BRAND -- is to be your best resource for real estate
-    advice. Whether you are a buyer, seller, or investor, our team of
+    Our mission at -- CLIENT BRAND -- is to be your best resource for real
+    estate advice. Whether you are a buyer, seller, or investor, our team of
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/TheChadSmithTeam
-  linkedin_url: https://www.linkedin.com/in/chadsmithteam/
-  gplus_url: https://plus.google.com/u/0/b/100541196387839514038
-  youtube_url: https://www.youtube.com/channel/UCUZSGuKs9601y4SjB9VT6Sw
-  twitter_url: https://twitter.com/ChadSmithTeam
+  facebook_url: 'https://www.facebook.com/TheChadSmithTeam'
+  linkedin_url: 'https://www.linkedin.com/in/chadsmithteam/'
+  gplus_url: 'https://plus.google.com/u/0/b/100541196387839514038'
+  youtube_url: 'https://www.youtube.com/channel/UCUZSGuKs9601y4SjB9VT6Sw'
+  twitter_url: 'https://twitter.com/ChadSmithTeam'
   instagram_url:
   pinterest_url:
-  zillow_url: https://www.zillow.com/profile/thechadsmithteam/
-  trulia_url: https://www.trulia.com/profile/chad-smith-team-agent-arlington-tx-zg64cgfm/overview
-  yelp_url: https://www.yelp.com/biz/the-chad-smith-team-arlington
+  zillow_url: 'https://www.zillow.com/profile/thechadsmithteam/'
+  trulia_url: >-
+    https://www.trulia.com/profile/chad-smith-team-agent-arlington-tx-zg64cgfm/overview
+  yelp_url: 'https://www.yelp.com/biz/the-chad-smith-team-arlington'
   podcast_url:
-
 podcast:
   title: Dallas Real Estate Podcast with Chad Smith
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the -- MARKET
+    -- Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+    -- MARKET -- Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in -- MARKET --,
+    home selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 60
-  hero_text: -- MARKET -- Real Estate Video Blog
+  hero_text: '-- MARKET -- Real Estate Video Blog'
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
@@ -101,13 +114,11 @@ site_colors:
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: black
-
+  shadow_color: '#000000'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
