Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,7 @@ client:
   brand: The John Schuster Group
   brokerage: Coldwell Banker Burnett
   address: 11455 Viking Dr, Suite 325 <br> Minneapolis, MN 55344
-  phone: 952-222-9000
+  phone: 952-333-SOLD
   phone_type:
   phone2:
   phone2_type:
