--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,7 +14,7 @@ client:
   market: Lake Norman Area
   brand: Lake Realty
   brokerage:
-  address: 19900 W. Catawba Ave. Suite 103, Cornelius, NC 28031
+  address: 19900 W. Catawba Ave. Suite 103<br>Cornelius, NC 28031
   phone: 704-892-6350
   phone_type:
   phone2:
@@ -66,9 +66,9 @@ welcome_box:
 
 socials:
   review_sm_icons: false
-  facebook_url:
+  facebook_url: https://www.facebook.com/LakeRealtyNC
   linkedin_url:
-  gplus_url:
+  gplus_url: https://plus.google.com/102290382446647929946
   youtube_url:
   twitter_url:
   instagram_url:
@@ -89,6 +89,7 @@ podcast:
 
 images:
   client_headshot_path: /img/headshot.jpg
+  client_headshot2_path: /img/headshot2.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 60
   hero_text: -- MARKET -- Real Estate Video Blog
