--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -34,7 +34,7 @@ sidebar_CTA:
     CTA_title: "Looking to Build Your Real Estate Career?"
     CTA_text: "Let's talk about how Lake Realty can take your business to new heights."
     CTA_link_text: "Request a Free Strategy Session"
-    CTA_url: /homevalue/
+    CTA_url: /contact-us/
 
 # second_sidebar_CTA:
 #   - CTA_image_path2: /img/cta-images/005.jpg
