Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,7 +68,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/DESANEANDASSOCIATES/
   linkedin_url: https://www.linkedin.com/in/joe-desane-2b946793/
-  gplus_url:
+  gplus_url: https://plus.google.com/b/115843048670556683804/115843048670556683804
   youtube_url: http://www.youtube.com/channel/UCVFxMZ5y_mhaJHX_zvcC5PQ
   twitter_url: https://twitter.com/DESANANDASSOC
   instagram_url:
