--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -27,7 +27,7 @@ CTAs:
   first_CTA_URL: http://ericmortimer.com/sell
   second_CTA_text: Home Search
   second_CTA_URL: http://search.ericmortimer.com/idx/results/listings?pt=3&srt=newest
-  VR_form:
+  VR_form: http://oi.vresp.com?fid=cebbd03461
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
