Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,7 +14,7 @@ client:
   market: Calgary
   brand: Eric Mortimer & Associates
   brokerage: Maxwell Capital Realty
-  address: '#150, 75 Crowfoot Rise NW Calgary, Alberta T2E 0B8'
+  address: '#150, 75 Crowfoot Rise NW <br>Calgary, Alberta T2E 0B8'
   phone: 403-827-8081
   phone_type:
   phone2:
