Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -56,7 +56,7 @@ second_sidebar_CTA:
     CTA_title2: Looking for a -- MARKET -- Home?
     CTA_text2: Search the entire MLS for your -- MARKET -- home.
     CTA_link_text2: Search the MLS
-    CTA_url2: /homesearch/www.focusrealestateteam.com/
+    CTA_url2: 'http://www.focusrealestateteam.com/featured-listing'
 lender:
   show_section: false
   header_text: Preferred Lender
