Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,7 +14,7 @@ custom_links:
 client:
   name: Windy Ruffini & Traci Farrell
   license_number: 1526913
-  about_markdown: >
+  about_markdown: >-
     Energy, experience, integrity and the calm efficiency to complete
     transactions smoothly. Those are the hallmarks of a professional. A
     professional you want on your side. Always FOCUSED on our clients, bringing
