Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -82,7 +82,7 @@ socials:
   linkedin_url:
   gplus_url: 'https://plus.google.com/111696315013409971890'
   youtube_url: 'https://www.youtube.com/channel/UC6S4I0qy7eZZ_x_Dp-nV7bQ'
-  twitter_url: 'https://twitter.com/JessReidCIRE'
+  twitter_url:
   instagram_url: 'https://www.instagram.com/windyruffinifocusrealestate/'
   pinterest_url:
   zillow_url: 'https://www.zillow.com/profile/windyruffini/'
