Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,10 +1,14 @@
 audit_header: false
 title: -- CLIENT BRAND --
 description: 'Our mission at -- CLIENT BRAND -- is to be your best resource for -- MARKET -- real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. If you are looking to buy or sell a home, you can get all the information and the latest updates, tips, and tricks from The -- CLIENT BRAND --, your professional -- MARKET -- Real Estate Agents.'
-show_custom_links: false
+show_custom_links: true
 custom_links:
-  - title:
-    url:
+  - title: Home Value Report
+    url: http://www.808guaranteedsale.com/
+  - title: Guaranteed Rent
+    url: http://www.hipacificpm.com/Guaranteedrent
+  - title: About
+    url: http://www.hipacificpm.com/aboutus
 
 client:
   name: Duke Kimhan
