--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -36,7 +36,7 @@ client:
   phone2:
   phone2_type:
   email: Windy@FocusRealEstateTeam.com
-  url: 'http://www.focusrealestateteam.com'
+  url: 'http://www.FocusRealEstateTeam.com'
 CTAs:
   first_CTA_text: Home Valuation
   first_CTA_URL: 'http://www.focusrealestateteam.com/evaluation'
