--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -82,7 +82,7 @@ podcast:
   author: '-- CLIENT NAME --'
 
 images:
-  client_headshot_path: http://i.imgur.com/EUpUpDs.jpg
+  client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 60
   hero_text: <br>
