--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,7 +11,7 @@ client:
   license_number:
   about_markdown: |
     Joe DeSane, born and raised in Palm Beach County, he understands the area and knows how to get top dollar for his clients. When working with Joe you can expect him and his team to negotiate you top dollar for your property. Their negotiation skills guide every buyer and seller through real estate obstacles leading them happily to the closing table. Joe and his team take a more aggressive approach when it comes to buying and selling real estate in today’s forever changing market. Joe possesses the ability to empower agents and create a collaborative, cooperative team. Continuously stressing the importance of building and maintaining client relationships, he provides agents with market knowledge, technology, and resources they require to effectively meet their clients’ needs. As a team in 2015, DeSane Realty Group sold over 140 homes to Palm Beach County Residents. In 2016, Joe’s team plans to assist over 200 buyers & sellers with their home needs.
-  market: Wellington
+  market: Palm Beach County
   brand: DeSane & Associates
   brokerage: Keller Williams Realty
   address: 12008 South Shore Blvd Suite 201. Wellington, FL 33414
@@ -68,7 +68,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/DESANEANDASSOCIATES/
   linkedin_url: https://www.linkedin.com/in/joe-desane-2b946793/
-  gplus_url: https://plus.google.com/b/115843048670556683804/115843048670556683804
+  gplus_url: https://plus.google.com/+DeSaneRealtyGroup
   youtube_url: http://www.youtube.com/channel/UCVFxMZ5y_mhaJHX_zvcC5PQ
   twitter_url: https://twitter.com/DESANANDASSOC
   instagram_url:
