Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -69,7 +69,7 @@ socials:
   facebook_url: https://www.facebook.com/DESANEANDASSOCIATES/
   linkedin_url: https://www.linkedin.com/in/joe-desane-2b946793/
   gplus_url: https://plus.google.com/+DeSaneRealtyGroup
-  youtube_url: http://www.youtube.com/channel/UCVFxMZ5y_mhaJHX_zvcC5PQ
+  youtube_url: https://www.youtube.com/c/DeSaneRealtyGroup
   twitter_url: https://twitter.com/DESANANDASSOC
   instagram_url:
   pinterest_url:
