Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,7 +14,7 @@ client:
   market: Palm Beach County
   brand: DeSane & Associates
   brokerage: Keller Williams Realty
-  address: 12008 South Shore Blvd Suite 201. Wellington, FL 33414
+  address: 12008 South Shore Blvd Suite 201<br/> Wellington, FL 33414
   phone: 561-320-2085
   phone_type:
   phone2:
