--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -30,7 +30,7 @@ CTAs:
   first_CTA_URL: /contact-us/
   # second_CTA_text: Home Search
   # second_CTA_URL: /homesearch/
-  VR_form:
+  VR_form: http://oi.vresp.com?fid=754a0f205a
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/005.jpg
