--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -92,7 +92,7 @@ images:
   client_headshot2_path: /img/headshot2.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: Thriving vs. Surviving Real Estate
+  hero_text: Thriving vs. Surviving at Real Estate
   hero_background_hex: '#999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
