Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,7 +24,7 @@ client:
     achievements.
   market: Ventura County
   brand: Steen Realty Group
-  brokerage: Keller Williams
+  brokerage: Keller Williams World Class
   address: '30700 Russell Ranch Rd, Suite 200<br>Westlake Village, CA 91362'
   phone: 805-551-3854
   phone_type:
