Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -65,10 +65,11 @@ lender:
 welcome_box:
   welcome_headline: Get Educated About Your Financial Future
   welcome_text_markdown: >-
-    Our mission at – CLIENT BRAND – is to be your best resource for financial
-    advice. Our team of professionals can answer any questions you might have
-    about finance. Subscribe to this blog to get the latest news on finance and
-    receive expert tips for preparing yourself for your financial future.
+    Our mission at Michigan 401k Advisors is to be your best resource for
+    financial advice. Our team of professionals can answer any questions you
+    might have about finance. Subscribe to this blog to get the latest news on
+    finance and receive expert tips for preparing yourself for your financial
+    future.
 socials:
   review_sm_icons: false
   facebook_url:
